configmap.yml
configpod.yml

apiVersion: v1
kind: Pod
metadata:
   name: mypod
spec:
    containers:
       - image: mysql
         name: mycont
         ports: 
          - containerPort: 3306
configmap1.yml

apiVersion: v1
kind: ConfigMap
metadata:
   name: myconfig
data:
   MYSQL_ROOT_PASSWORD: Pass@123
   MYSQL_DATABASE: mydb


configpod.yml

apiVersion: v1
kind: Pod
metadata:
   name: mypod1
spec:
    containers:
       - image: mysql
         name: mycont
         ports: 
          - containerPort: 3306
