myfile.yml
apiVersion: v1
kind: Pod
metadata:
  name: mydbpod
spec:
  containers:
   - image: mysql
     name: mydbpod
     ports:
      - containerPort: 3306
        hostPort: 3306
